Ready for 1.0 publish to nuget

--- a/SharpEnums/SharpEnums.csproj
+++ b/SharpEnums/SharpEnums.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <AssemblyName>Palit.SharpEnums</AssemblyName>
+    <RootNamespace>Palit.SharpEnums</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
+  </ItemGroup>
 
 </Project>
